<resources>

    <string name="app_name">ChatApp</string>

    <string name="main_name">Danh Sách Tin Nhắn</string>
    <string name="login_name">Đăng Nhập</string>
    <string name="singup_name">Đăng Ký</string>
    <string name="chat_name">Tin Nhắn</string>
    <string name="update_Info_name">Thay Đổi Thông Tin Cá Nhân</string>
    <string name="password_name">Thay Đổi Mật Khẩu</string>
    <string name="Info_name">Thông Tin Cá Nhân</string>
    <!-- Các hành động -->
    <string name="common_action_close">Đóng</string>
    <string name="common_action_save">Lưu</string>

    <!-- Các Menu -->
    <string name="menu_item_search">Tìm kiếm</string>
    <string name="menu_item_about_account">Thông tin cá nhân</string>
    <string name="menu_item_change_password">Thay đổi mật khẩu</string>
    <string name="menu_item_about_app">Về Ứng Dụng</string>
    <string name="menu_item_help">Giúp Đỡ</string>
    <string name="menu_item_logout">Đăng Xuất</string>
    <string name="menu_item_version_app">Phiên bản %s</string>

    <!-- Màn hình chính -->
    <string name="mainscreen_empty_note">Bạn chưa có bạn bè nào cho mình, hãy tìm kiếm cho mình một số bạn bè</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Màn hình Note detail -->
    <string name="note_detail_delete">Xóa</string>
    <string name="note_detail_category">Chủ Đề</string>
    <string name="note_detail_other_information">Thông Tin Khác</string>
    <string name="note_detail_add_note_hint">Ghi Chú - Có Thể Thêm Vào Sau</string>

    <!--Sing Up-->
    <string name="move_login">Bạn đã có tài khoản? Đăng nhập tại đây</string>
    <string name="move_register">Bạn chưa có tài khoản? Đăng ký tại đây</string>
    <string name="move_resetPass">Bạn quên mật khẩu? Reset pass tại đây</string>
    <string name="menu_item_list_friend">Danh sách bạn bè</string>

    <!--Record-->
    <string name="stop_recording_string">Stop Recording</string>
    <string name="start_recording_string">Start Recording</string>
    <string name="start_playback_string">Start Playback</string>
    <string name="stop_playback_string">Stop Playback</string>


</resources>
